--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
         "react": "^18.0.0",
         "react-bootstrap": "^2.2.3",
         "react-dom": "^18.0.0",
-        "react-router": "^6.3.0",
         "react-router-bootstrap": "^0.26.1",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
